@@ -1,3 +1,8 @@
+2009-02-13  Ross Burton  <ross@linux.intel.com>
+
+	* libjuicer/sj-extractor.c:
+	Handle comma separated genres.
+
 2009-02-10  Ross Burton  <ross@linux.intel.com>
 
 	* configure.in:
